welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: '=>' expected but 'if' found.
    case a if (a%3) if (a%5) =>"Fizz Buzz"
                    ^